# Quloud

./: .coverage  .gitignore  LICENSE  Makefile  README.md  RESEARCH.md  confer_dot_io_review_of_project.md  pyproject.toml  quloud.code-workspace
.github/badges/: mutation.json
.github/workflows/: ci.yml  codeql.yml  mutation.yml
src/quloud/: __init__.py  main.py
src/quloud/adapters/encryption/: pynacl_adapter.py
src/quloud/adapters/key_store/: filesystem_adapter.py
src/quloud/adapters/storage/: filesystem_adapter.py
src/quloud/core/: encryption_service.py  key_store_service.py  messages.py  node_client.py  protocols.py  storage_node_handler.py  storage_service.py
src/quloud/services/: delete_request_handler.py  message_contracts.py  node_client.py  proof_request_handler.py  proof_response_handler.py  retrieve_request_handler.py  retrieve_response_handler.py  store_request_handler.py  store_response_handler.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_quloud.py
tests/integration/: test_encryption_adapter.py  test_encryption_service.py  test_node_client.py  test_proof_request_handler.py  test_proof_response_handler.py  test_retrieve_request_handler.py  test_retrieve_response_handler.py  test_storage_node_handler.py  test_storage_service.py  test_store_request_handler.py  test_store_response_handler.py
tests/mutation/: conftest.py  test_mutation_quloud.py
tests/unit/: test_messages.py
