[project]
name = "quloud"
version = "0.1.0"
description = "Trustless federated storage - autonomous NAS node for decentralized data redundancy"
readme = "README.md"
authors = [
    { name = "Izzy Fuller", email = "izzy.fuller.developer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
