[project]
name = "quloud"
version = "0.1.0"
description = "Trustless federated storage - autonomous NAS node for decentralized data redundancy"
readme = "README.md"
authors = [
    { name = "Izzy Fuller", email = "izzy.fuller.developer@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pika>=1.3.2",
    "pynacl>=1.5.0",
    "synapse @ git+https://github.com/IzzyFuller/synapse.git@main",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "mermaid-py>=0.1.0",  # For local mermaid diagram rendering
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/protocols.py",
    "*/protocols/*.py",
    "*/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "mutmut>=3.2.0",
]

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pika.*", "nacl.*"]
ignore_missing_imports = true

[tool.mutmut]
paths_to_mutate = [
    # Core
    "src/quloud/core/storage_service.py",
    "src/quloud/core/encryption_service.py",
    # Adapters
    "src/quloud/adapters/encryption/pynacl_adapter.py",
    "src/quloud/adapters/storage/filesystem_adapter.py",
    # Services
    "src/quloud/services/node_client.py",
    "src/quloud/services/message_contracts.py",
    "src/quloud/services/store_request_handler.py",
    "src/quloud/services/store_response_handler.py",
    "src/quloud/services/retrieve_request_handler.py",
    "src/quloud/services/retrieve_response_handler.py",
    "src/quloud/services/proof_request_handler.py",
    "src/quloud/services/proof_response_handler.py",
]
tests_dir = ["tests"]
also_copy = ["src"]
